--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -1,6 +1,6 @@
 {% include 'header.html.twig' %}
 
-{% if select_form is defined %}
+{% if select_form %}
   <form method="GET">
     <div class="card mb-3">
       <div class="card-body">
@@ -21,8 +21,8 @@
   </form>
 {% endif %}
 
-{% if deadline is defined and deadline %}
-  <div class="position-fixed top-50 end-0 translate-middle-y p-3 bg-primary text-white shadow rounded me-4">
+{% if deadline %}
+  <div class="position-fixed top-50 end-0 translate-middle-y p-3 bg-primary text-white shadow rounded me-4" style="z-index: 2000">
     <h5 class="text-center">Deadline</h5>
     <p id="deadline" class="text-center fs-5">Loading...</p>
   </div>
@@ -52,7 +52,7 @@
   </script>
 {% endif %}
 
-{% if embed_file is defined and embed_file %}
+{% if embed_file %}
   <div class="card my-3">
     <div class="card-header">
       <h5 class="mb-0">File Preview</h5>
@@ -63,7 +63,7 @@
   </div>
 {% endif %}
 
-{% if monospace is defined and monospace %}
+{% if monospace %}
 <div class="container mt-4">
   <h4>Log Output</h4>
   <div class="bg-dark text-light p-3 rounded overflow-auto" style="max-height: 400px">
@@ -72,36 +72,53 @@
 </div>
 {% endif %}
 
-{% if table is defined and table %}
-  <table class="table table-striped table-bordered table-hover w-auto">
-    <thead class="table-primary sticky-top">
-      <tr>
-        {% for key in table|first|keys %}
-          <th>{{ key }}</th>
-        {% endfor %}
-    </tr>
-    </thead>
-    <tbody>
-      {% for row in table %}
+{% if table %}
+  {% if (table|first)._large_table is defined %}
+    </div>
+    <div class="col-md-12">
+  {% endif %}
+  <div class="container-fluid my-4">
+    <table class="table table-striped table-bordered table-hover w-auto">
+      <thead class="table-primary sticky-top">
         <tr>
-          {% for value in row %}
-            <td>
-            {% if value is iterable and value.url is defined %}
-              <a href="{{ value.url }}">{{ value.label }}</a>
-            {% elseif value is iterable and value.html is defined %}
-              {{ value.html|raw }}
-            {% else %}
-              {{ value|nl2br }}
+          {% for key in table|first|keys %}
+            {% if key != '_large_table' %}
+              <th>{{ key }}</th>
             {% endif %}
-            </td>
           {% endfor %}
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+      </tr>
+      </thead>
+      <tbody>
+        {% for row in table %}
+          <tr>
+            {% for key, value in row %}
+              {% if key != '_large_table' %}
+                <td style="
+                {% if value is iterable and value.width is defined %}
+                  min-width: {{ value.width }}px;
+                {% endif %}
+                word-break: break-word">
+                {% if value is iterable and value.url is defined %}
+                  <a href="{{ value.url }}">{{ value.label }}</a>
+                {% elseif value is iterable and value.html is defined %}
+                  {{ value.html|raw }}
+                {% else %}
+                  {{ value|nl2br }}
+                {% endif %}
+                </td>
+              {% endif %}
+            {% endfor %}
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% if (table|first)._large_table is defined %}
+    </div><div class="col-md-7">
+  {% endif %}
 {% endif %}
 
-{% if lists is defined and lists %}
+{% if lists %}
   <div class="container mt-4">
     {% for label, items in lists %}
       <div class="card mb-3">
@@ -124,7 +141,7 @@
   </div>
 {% endif %}
 
-{% if form is defined %}
+{% if form %}
   <div class="card mb-4" style="max-width: 600px; margin: 0 auto">
     <div class="card-body">
       {{ form_start(form) }}
@@ -146,7 +163,7 @@
   </div>
 {% endif %}
 
-{% if bottom_links is defined and bottom_links %}
+{% if bottom_links %}
   <div class="mt-3 mb-3 bg-light py-3 container">
     {% for line in bottom_links %}
       <a href="{{ line.url }}" class="d-block text-decoration-none">{{line.label}}</a>
