--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -1,8 +1,30 @@
 {% include 'header.html.twig' %}
 
+</div>
+<div class="col-md-12">
+
 <script src="https://cdn.plot.ly/plotly-3.0.0.min.js"></script>
 <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
 <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.js"></script>
+
+<form method="GET">
+  <div class="card mb-3">
+    <div class="card-body">
+      <div class="row g-3">
+        {% for field in select_form %}
+          {% if 'hidden' in field.vars.block_prefixes %}
+            {{ form_widget(field) }}
+          {% else %}
+            <div class="col-md-2">
+              {{ form_row(field, {'attr': {'class': 'form-control',
+                                           'onchange': 'this.form.submit()'}}) }}
+            </div>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+</form>
 
 <div class="container justify-content-center">
   <div class="row">
@@ -27,8 +49,8 @@
   </div>
 </div>
 
-<div class="container mt-4 mb-4">
-  <div class="card shadow">
+<div class="container mt-4 mb-4 d-flex justify-content-center">
+  <div class="card shadow w-auto">
     <div class="card-header bg-primary text-white">
       <h5 class="mb-0">All projects</h5>
     </div>
@@ -173,7 +195,7 @@ Plotly.newPlot('projsplot', data, layout, config);
 
 // the table
 var tabledata = [
-  {% for row in table %}
+  {% for row in all_projects %}
     { id: {{ row.id }},
       name: "{{ row.name|e('js') }}",
       url: "{{ row.url|e('js') }}",
@@ -185,7 +207,7 @@ var tabledata = [
   {% endfor %}
 ];
 var table = new Tabulator("#projects-table", {
-  height: 250,
+  height: 350,
   data: tabledata,
   layout: "fitColumns",
   columns: [
