--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -3,9 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PIC1: {{title}}</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  {{ dependecies|raw }}
 </head>
+
 <body class="container mt-0">
 <nav class="py-2 bg-body-secondary border-bottom">
   <div class="container d-flex flex-wrap">
