fix dashboard table

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -45,8 +45,8 @@
   </div>
 </div>
 
-<div class="container mt-4 mb-4 d-flex justify-content-center">
-  <div class="card shadow w-auto">
+<div class="container my-4 col-md-9 justify-content-center">
+  <div class="card shadow">
     <div class="card-header bg-primary text-white">
       <h5 class="mb-0">All projects</h5>
     </div>
