--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PIC1: {{title}}</title>
-  {{ dependecies|raw }}
+  {{ dependencies|raw }}
 </head>
 
 <body class="container mt-0">
