--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -24,6 +24,28 @@
   <div class="col-md-7">
 {% endif %}
 
+{% if display_formula %}
+  <div class="card my-3">
+    <div class="card-header">
+      <h5 class="mb-0">{{ display_formula.title }}</h5>
+    </div>
+    <div class="card-body">
+      <svg xmlns="http://www.w3.org/2000/svg" width="500" height="50">
+        <text x="10" y="30" font-size="18" font-family="Arial">
+          {% for f in display_formula.items %}
+            <tspan fill="{{ f.color }}">
+              {% if f.title is defined %}
+                <title>{{ f.title }}</title>
+              {% endif %}
+              {{ f.var }}
+            </tspan>
+          {% endfor %}
+        </text>
+      </svg>
+    </div>
+  </div>
+{% endif %}
+
 {% if deadline %}
   <div class="position-fixed top-50 end-0 translate-middle-y p-3 bg-primary text-white shadow rounded me-4" style="z-index: 2000">
     <h5 class="text-center">Deadline</h5>
@@ -100,6 +122,9 @@
                   <td style="min-width: {{ value.width }}px">
                 {% elseif value is iterable and value.longdata is defined %}
                   <td style="word-break: break-word">
+                {% elseif value is iterable and value.tooltip is defined %}
+                  <td data-bs-toggle="tooltip" data-bs-html="true"
+                      title="{{value.tooltip|nl2br}}">
                 {% else %}
                   <td>
                 {% endif %}
@@ -110,6 +135,8 @@
                   {{ value.html|raw }}
                 {% elseif value is iterable and value.longdata is defined %}
                   {{ value.longdata|nl2br }}
+                {% elseif value is iterable and value.text is defined %}
+                  {{ value.text|nl2br }}
                 {% else %}
                   {{ value|nl2br }}
                 {% endif %}
@@ -254,10 +281,44 @@
 {% endif %}
 
 {% if bottom_links %}
-  <div class="mt-3 mb-3 bg-light py-3 container">
+  <div class="my-3 bg-light py-3 container">
     {% for line in bottom_links %}
       <a href="{{ line.url }}" class="d-block text-decoration-none">{{line.label}}</a>
     {% endfor %}
+  </div>
+{% endif %}
+
+{% if eval_forms %}
+  <div class="card my-3">
+    <div class="card-body">
+      <h5 class="card-title">Evaluation</h5>
+      <div class="row g-3">
+        {% for form in eval_forms %}
+          <div class="col-md-6">
+            <div class="p-3 border rounded">
+              {{ form_start(form.fields) }}
+              <h6>{{ form.title }}</h6>
+              {% for field in form.fields %}
+                {% if 'hidden' in field.vars.block_prefixes %}
+                  {{ form_widget(field) }}
+                {% elseif 'range' in field.vars.block_prefixes %}
+                  <div class="mb-2">
+                    <label class="form-label" for="{{ field.vars.id }}">{{ field.vars.label }}</label>
+                    <div class="d-flex">
+                      <output for="{{ field.vars.id }}" class="me-2">{{ field.vars.data }}</output>&nbsp;
+                      {{ form_widget(field, {attr: {class: 'form-range', oninput: 'this.previousElementSibling.value = this.value'}}) }}
+                    </div>
+                  </div>
+                {% else %}
+                  {{ form_row(field) }}
+                {% endif %}
+              {% endfor %}
+              {{ form_end(form.fields) }}
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
   </div>
 {% endif %}
 
