--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -347,7 +347,7 @@ var layout = {
   margin: { l: 25, r: 10, t: 10, b: 20 },
   height: 250
 };
-config = {
+var config = {
   displayModeBar: false,
   responsive: true
 };
