break long words in patch comments

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -221,7 +221,7 @@
             <span class="font-weight-bold">{{ comment.author }}</span>
             <small class="text-muted">{{ comment.date|date('d/m/Y H:i:s') }}</small>
           </div>
-          <div class="flex-grow-1">
+          <div class="flex-grow-1 text-break">
             <p class="mb-0">{{ comment.text|nl2br }}</p>
           </div>
         </div>
