fix #69: link to final report from the project page

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -282,7 +282,7 @@
 
 {% if bottom_links %}
   <div class="bg-light container my-2 py-3">
-    <div class="row">
+    <div class="row gy-3">
       {% for line in bottom_links %}
         <div class="col-auto">
           <a href="{{ line.url }}" class="text-decoration-none">
