--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -243,8 +243,8 @@
             <span class="font-weight-bold">{{ comment.author }}</span>
             <small class="text-muted">{{ comment.date|date('d/m/Y H:i:s') }}</small>
           </div>
-          <div class="flex-grow-1 text-break">
-            <p class="mb-0">{{ comment.text|markdown }}</p>
+          <div class="flex-grow-1 text-break comment-body">
+            {{ comment.text|markdown }}
           </div>
         </div>
       {% endfor %}
